2004-03-13 Marius Mauch <genone@gentoo.org>
	* Added glsa-check and glsa.py, please note:
		- they are only temporary for testing, so no manpage/ChangeLog
		- their CVS home is in gentoo-projects
	* fixed bugs #42160, #40935, #43389

2004-02-08 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added ebump
	* Added gensync
	* Added epkgmove, closes #36663.
	
2004-02-06 Marius Mauch <genone@gentoo.org>
	* fixed bugs #40159, #39798, #39652, #39596, #39293
	* changed etcat and equery behavior for ambigous package names,
		they now return values for all matching packages rather
		than erroring out
	* added "will be phased out" messages to etcat and qpkg

2004-01-23 Marius Mauch <genone@gentoo.org>
	* lots of bugfixes

2004-01-14 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added src/ego to gentoolkit-dev

2003-01-12 Marius Mauch <genone@gentoo.org>
	* fixed traceback in equery
	* added more information on "equery list"

2004-01-10 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added src/ego

2004-01-07 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added new build system
	* Added src/old-scripts, the scripts from app-portage/gentoolkit
	* Renamed gentool to equery
	* Released 0.2.0_pre1
        
2003-12-08 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Removed emerge-rsync, emerge-webrsync
	* Added moo
	* Added skeleton man pages to all packages
	* Added Makefile
	
2003-10-04 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Rewrote dep-clean to python
		
2003-06-31 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Rewrote more of etcat; many of the functions now employ
	gentoolkit.
	* Replaced qpkg with stubs of a reimplementation in python.

2003-06-27 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added patch to echangelog to consider PORTDIR, fixes #23881.
	
2003-06-26 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added echangelog, by agenkin
	* Added ekeyword, by agenkin
	* Added gentoolkit, the common python library for all Gentoolkit
	tools.